feat(ci): add go test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,3 +24,6 @@ jobs:
       
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
+
+      - name: go tests
+        run: go test -race -v ./...
