--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,22 @@
 version: 2
 updates:
-  - package-ecosystem: gomod
-    directory: "/"
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: weekly
-      day: sunday
+      interval: monthly
     reviewers:
-      - "vitalvas"
+      - vitalvas
     assignees:
-      - "vitalvas"
+      - vitalvas
+  - package-ecosystem: gomod
+    directory: /
+    schedule:
+      interval: monthly
+    reviewers:
+      - vitalvas
+    assignees:
+      - vitalvas
+    groups:
+      dependencies:
+        patterns:
+          - '*'
