--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,28 +1,24 @@
 linters:
   enable:
-    - megacheck
-    - revive
-    - govet
-    - unconvert
-    - megacheck
-    - gas
-    - gocyclo
-    - dupl
-    - misspell
-    - typecheck
-    - ineffassign
-    - stylecheck
-    - exportloopref
-    - gocritic
-    - nakedret
-    - gosimple
-    - prealloc
-    - staticcheck
-    - unused
+    - copyloopvar
     - dogsled
+    - dupl
+    - gocritic
+    - gocyclo
+    - gosimple
+    - govet
+    - ineffassign
+    - misspell
+    - nakedret
+    - prealloc
+    - revive
+    - staticcheck
+    - stylecheck
+    - typecheck
+    - unconvert
+    - unused
   fast: false
   disable-all: true
-
 linters-settings:
   gosec:
     excludes:
