fix: update deps and add tests

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,10 @@ updates:
       - vitalvas
     assignees:
       - vitalvas
+    groups:
+      dependencies:
+        patterns:
+          - '*'
   - package-ecosystem: gomod
     directory: /
     schedule:
