--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,12 @@
+version: "2"
 linters:
+  default: none
   enable:
     - copyloopvar
     - dogsled
     - dupl
     - gocritic
     - gocyclo
-    - gosimple
     - govet
     - ineffassign
     - misspell
@@ -13,13 +14,29 @@ linters:
     - prealloc
     - revive
     - staticcheck
-    - stylecheck
-    - typecheck
     - unconvert
     - unused
-  fast: false
-  disable-all: true
-linters-settings:
-  gosec:
-    excludes:
-      - G402
+  settings:
+    gosec:
+      excludes:
+        - G402
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - builtin$
+      - examples$
+      - third_party$
+      - vendor$
+formatters:
+  exclusions:
+    generated: lax
+    paths:
+      - builtin$
+      - examples$
+      - third_party$
+      - vendor$
